Closed Bug 127639 Opened 23 years ago Closed 23 years ago

[FIX]Print preview crashes at http://www.s1.com/

Categories

(Core :: Print Preview, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: DomIncollingo, Assigned: rods)

References

()

Details

(Keywords: crash)

Attachments

(1 file, 2 obsolete files)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.8+)
Gecko/20020222
BuildID:    2002022203



Reproducible: Always
Steps to Reproduce:
1.Navigate to http://www.s1.com/
2.Choose File => Print Preview
3.Mozilla crashes.

Expected Results:  Mozilla should not crash.

Please see TalkBack incidents TB3330225Y and TB3330212W.
Confirmed. Build ID 2002022408 win2k.
Also there on -208 for Win98...
Keywords: crash
Stephen, can you retreive Talkback data please: TB3330212W
 or TB3330225Y ?
Status: UNCONFIRMED → NEW
Ever confirmed: true
PresShell::GetPageSequenceFrame
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 3406]
DocumentViewerImpl::DoPrint
[d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 4065]
DocumentViewerImpl::ShowDocList
[d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 5030]
DocumentViewerImpl::ShowDocList
[d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 5040]
DocumentViewerImpl::InstallNewPresentation
[d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 5375]
DocumentViewerImpl::PrintPreview
[d:\builds\seamonkey\mozilla\content\base\src\nsDocumentViewer.cpp, line 5727]
XPTC_InvokeByIndex
[d:\builds\seamonkey\mozilla\xpcom\reflect\xptcall\src\md\win32\xptcinvoke.cpp,
line 106]
XPCWrappedNative::CallMethod
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednative.cpp, line 2000]
XPC_WN_CallMethod
[d:\builds\seamonkey\mozilla\js\src\xpconnect\src\xpcwrappednativejsops.cpp,
line 1267]
js_Invoke [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 834]
js_Interpret [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 2803]
js_Invoke [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 850]
js_InternalInvoke [d:\builds\seamonkey\mozilla\js\src\jsinterp.c, line 925]
JS_CallFunctionValue [d:\builds\seamonkey\mozilla\js\src\jsapi.c, line 3417]
nsJSContext::CallEventHandler
[d:\builds\seamonkey\mozilla\dom\src\base\nsJSEnvironment.cpp, line 1019]
nsJSEventListener::HandleEvent
[d:\builds\seamonkey\mozilla\dom\src\events\nsJSEventListener.cpp, line 182]
nsEventListenerManager::HandleEventSubType
[d:\builds\seamonkey\mozilla\content\events\src\nsEventListenerManager.cpp, line
1218]
nsEventListenerManager::HandleEvent
[d:\builds\seamonkey\mozilla\content\events\src\nsEventListenerManager.cpp, line
2210]
nsXULElement::HandleDOMEvent
[d:\builds\seamonkey\mozilla\content\xul\content\src\nsXULElement.cpp, line 3453]
PresShell::HandleDOMEventWithTarget
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 6053]
nsMenuFrame::Execute
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsMenuFrame.cpp, line 1637]
nsMenuFrame::HandleEvent
[d:\builds\seamonkey\mozilla\layout\xul\base\src\nsMenuFrame.cpp, line 466]
PresShell::HandleEventInternal
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 6022]
PresShell::HandleEvent
[d:\builds\seamonkey\mozilla\layout\html\base\src\nsPresShell.cpp, line 5928]
nsViewManager::HandleEvent
[d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp, line 2043]
nsView::HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp, line 306]
nsViewManager::DispatchEvent
[d:\builds\seamonkey\mozilla\view\src\nsViewManager.cpp, line 1863]
HandleEvent [d:\builds\seamonkey\mozilla\view\src\nsView.cpp, line 83]
nsWindow::DispatchEvent
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 860]
nsWindow::DispatchWindowEvent
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 877]
nsWindow::DispatchMouseEvent
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 4619]
ChildWindow::DispatchMouseEvent
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 4869]
nsWindow::ProcessMessage
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 3544]
nsWindow::WindowProc
[d:\builds\seamonkey\mozilla\widget\src\windows\nsWindow.cpp, line 1122]
USER32.DLL + 0x2e98 (0x77e12e98)
USER32.DLL + 0x30e0 (0x77e130e0)
USER32.DLL + 0x5824 (0x77e15824)
nsAppShellService::Run
[d:\builds\seamonkey\mozilla\xpfe\appshell\src\nsAppShellService.cpp, line 308]
main1 [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1301]
main [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1628]
WinMain [d:\builds\seamonkey\mozilla\xpfe\bootstrap\nsAppRunner.cpp, line 1646]
WinMainCRTStartup()
KERNEL32.DLL + 0x17d08 (0x77e97d08) 
Status: NEW → ASSIGNED
Keywords: nsbeta1
Target Milestone: --- → mozilla0.9.9
Attached patch low risk patch (obsolete) — Splinter Review
We shouldn't be doing either of these call if we have already decided it wasn't
printable.
Summary: Print preview crashes at http://www.s1.com/ → [FIX]Print preview crashes at http://www.s1.com/
Attachment #71331 - Flags: superreview+
Comment on attachment 71331 [details] [diff] [review]
low risk patch

Why is SuppressFocusAndShow added?  

Also, I would not use a default parameter for the aEnableFocusEvents argument -
you may have more sites to patch up, but other than that why should it be
defaulted?

sr=attinasi if the first point is addressed (the second is a minor nit)
Marking nsbeta1+
Keywords: nsbeta1nsbeta1+
Comment on attachment 71331 [details] [diff] [review]
low risk patch

r=dcone
Attachment #71331 - Flags: review+
Attached patch patch (obsolete) — Splinter Review
Attachment #71331 - Attachment is obsolete: true
Attachment #71346 - Attachment is obsolete: true
Comment on attachment 71350 [details] [diff] [review]
really the right patch this time

r=dcone
Attachment #71350 - Flags: review+
Comment on attachment 71350 [details] [diff] [review]
really the right patch this time

oh - sr=attinasi
Attachment #71350 - Flags: superreview+
a=asa (on behalf of drivers) for checkin to 0.9.9
fixed
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified in 3/1 trunk build.  works fine now.

Dom, REOPEN if you are still having problems.
Status: RESOLVED → VERIFIED
Works fine for me too.   Thank you very much.
Rods: Should be this bug reopened, if there is something same in bug 134769
(with different stack signature)? 
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: