Don't call these methods when the PO is not printable. Bug 127639 r=dcone sr=attinas a=asa